RegressionTests/TestSuiteExport/reject/inline_asm_invalid_immediate_operand.blade
// EXPECT: fail
// DIAGNOSTICS: InlineAsmInvalidImmediateOperand

fn f() void {
    var x: u32 = 0;
    asm {
        MOV {x}, #
    };
}
